--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.project.sourcePaths": [
-        "SangeethaMahendra/src/AssignmentsUntilConditional"
+        "SangeethaMahendra/src/AssignmentsUntilConditional",
+        "Anusha's Work/src"
     ]
 }
