--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
+        {
+            "type": "java",
+            "name": "Launch ScannerMethod",
+            "request": "launch",
+            "mainClass": "ScannerMethod",
+            "projectName": "JavaBasics_9d668620"
+        },
         {
             "type": "java",
             "name": "Launch Current File",
