--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
         "SangeethaMahendra/src/AssignmentsUntilConditional",
-        "Anusha's Work/src"
+        "Anusha's Work/src",
+        "Arsu/src"
     ]
 }
