--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "JavaBasics_d0f1dbc5"
+        },
+        {
+            "type": "java",
             "name": "Launch task1",
             "request": "launch",
             "mainClass": "task1",
