--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "SangeethaMahendra/src/AssignmentsUntilConditional",
+        "Arsu/src",
         "Anusha's Work/src",
-        "Arsu/src"
+        "Rajithasrc/src"
     ]
 }
