--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "java.project.sourcePaths": [
         "SangeethaMahendra/src/AssignmentsUntilConditional",
+        "Rajithasrc/src",
+        "Ganesh_work/src",
         "Arsu/src",
         "Anusha's Work/src",
-        "Rajithasrc/src"
+        "AnithaDama/java/anitha/assignments"
     ]
 }
