--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Ganesh_work/src",
         "Arsu/src",
         "Anusha's Work/src",
-        "AnithaDama/java/anitha/assignments"
+        "AnithaDama/java/anitha/assignments",
+        "SangeethaMahendra"
     ]
 }
