--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
     "java.project.sourcePaths": [
-        "SangeethaMahendra/src/AssignmentsUntilConditional",
+        "SangeethaMahendra",
         "Rajithasrc/src",
         "Ganesh_work/src",
         "Arsu/src",
         "Anusha's Work/src",
         "AnithaDama/java/anitha/assignments",
-        "SangeethaMahendra"
+        "Rajithasrc/pack1"
     ]
 }
